--- a/Components/UI/Carousel/Carousel.module.css
+++ b/Components/UI/Carousel/Carousel.module.css
@@ -14,15 +14,18 @@
   margin-top: 5px;
 }
 .carousel img {
-  width: 85%;
+  width: 100%;
   margin: 0 auto;
 }
 .carousel article {
   text-align: start;
   font-size: 16px;
-  line-height: 22px;
+  line-height: 20px;
   font-weight: 700;
 }
 .carousel figcaption {
   margin-top: 2px;
+}
+.carousel h2 {
+  font-weight: 400;
 }
