--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,14 +3,13 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
-    Fira Sans, Droid Sans, Montserrat Helvetica Neue, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 html {
   scroll-behavior: smooth;
 }
 body {
-  background-color: #000000c4;
+  background-color: #181818;
 }
 article,
 aside,
