--- a/Components/UI/TitleMovie/TitleMovie.module.css
+++ b/Components/UI/TitleMovie/TitleMovie.module.css
@@ -61,35 +61,28 @@
   background: #0000008a;
   display: flex;
   align-items: center;
-  animation: div-animation 0.5s ease-out;
 }
-@keyframes div-animation {
-  0% {
-    opacity: 0.2;
-    transform: translateX(-100%);
-  }
-  15% {
-    opacity: 0.4;
-    transform: translateX(-85%);
-  }
-  30% {
-    opacity: 0.6;
-    transform: translateX(-75%);
-  }
-  45% {
-    opacity: 0.8;
-    transform: translateX(-60%);
-  }
-  60% {
-    opacity: 0.8;
-    transform: translateX(-30%);
-  }
-  75% {
-    opacity: 0.9;
-    transform: translateX(-15%);
-  }
-  100% {
-    opacity: 1;
-    transform: translateX(0%);
-  }
+.list-actions {
+  width: 50%;
+  margin: 0 auto;
+}
+.play-btn-container {
+  min-width: 200px;
+  min-height: 70px;
+  background: #fff;
+  border-radius: 15px;
+  color: #000000;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: space-evenly;
+  font-weight: 600;
+}
+.play-btn-container label {
+  margin-left: 2px;
+}
+
+.container-btn {
+  display: flex;
+  justify-content: space-around;
 }
